<resources>
    <string name="app_name">Good Travel</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="title_activity_content">Good Travel</string>
    <string name="action_settings">Settings</string>


    <string name="make_easy_route">Создать маршрут</string>
    <string name="maker_travel_type_text">Выберете одну или несколько категорий отдыха.</string>
    <string name="maker_travel_spec_text">Расскажите подробнее о том, какой отдых Вас интересует.</string>
    <string name="maker_travel_list_text">Мы отобрали для вас несколько мест, которые Вы возможно захотите посетить.</string>
    <string name="maker_travel_calendar_text">Укажите даты начала и конца
        планируемой поездки.</string>
    <string name="maker_travel_average_bill_label">Средний чек:</string>
    <string name="maker_travel_spec_wealth_level">Укажите сколько вы готовы потратить</string>
    <string name="maker_travel_type_active">Активный</string>
    <string name="maker_travel_type_relax">Пассивный</string>
    <string name="maker_travel_type_culture">Культурный</string>
    <string name="maker_travel_spec_familyornot">Едет ли с Вами еще кто-нибудь?</string>
    <string name="maker_travel_spec_individuals">Только я</string>
    <string name="maker_travel_spec_couple">С партнером</string>
    <string name="maker_travel_spec_family">С семьей</string>

    <string name="maker_step1_label">Первый шаг</string>
    <string name="maker_step2_label">Второй шаг</string>
    <string name="maker_step3_label">Третий шаг</string>
    <string name="maker_step4_label">Четвертый шаг</string>

    <string name="maker_travel_last_label">Проверьте информацию о маршруте. Если все в порядке, нажмите "Готово", чтобы сохранить маршрут.</string>
    <string name="maker_travel_ready_button">Готово</string>
    <string name="next">Далее</string>
    <string name="try_again">Добавить еще дату</string>
    <string name="title_activity_plan">PlanActivity</string>

    <integer name="com_vk_sdk_AppId">5725354</integer>
    <string name="login_message">Вход в приложение </string>
    <string name="login_hint">Логин</string>
    <string name="password_hint">Пароль</string>
    <string name="new_quote_text_hint">Введите текст цитаты</string>
    <string name="new_quote_author_hint">Введите автора</string>
    <string name="add_new_quote_title">Добавление цитаты</string>
    <string name="continue_without_signin">Продолжить без входа</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
