<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:paddingLeft="16dp" android:paddingRight="16dp">

    <TextView android:id="@+id/loginTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/login_message"
        android:textSize="35sp"/>

    <EditText android:id="@+id/loginEmailField"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:hint="@string/login_hint"
        android:textAlignment="center"
        android:layout_below="@id/loginTextView"
        android:layout_centerHorizontal="true" />

    <EditText android:id="@+id/loginPassField"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:hint="@string/password_hint"
        android:textAlignment="center"
        android:layout_below="@id/loginEmailField"
        android:layout_alignLeft="@id/loginEmailField"
        android:layout_alignStart="@id/loginEmailField" />

    <Button android:id="@+id/vkAuthButton"
        android:text="Vk Auth"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/loginPassField"
        android:layout_centerHorizontal="true" />


</RelativeLayout>