<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:orientation="vertical" android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:paddingBottom="15dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableBottom="@color/wallet_link_text_light"
            android:text="@string/maker_travel_spec_text"
            android:textSize="26sp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:padding="15dp"
            android:textColor="@color/wallet_holo_blue_light"
            android:textAlignment="center"
            android:layout_weight="0"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/maker_travel_spec_wealth_level"
            android:layout_marginBottom="20dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <org.adw.library.widgets.discreteseekbar.DiscreteSeekBar
                style="@style/Widget.AppCompat.SeekBar.Discrete"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:dsb_min="1"
                app:dsb_max="3"
                android:id="@+id/seekBar" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:src="@mipmap/route_maker_wealth"
                android:paddingLeft="20dp"
                android:paddingRight="10dp" />

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/maker_travel_spec_familyornot"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="20dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/single_button"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:src="@mipmap/route_maker_individuals"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0"
                    android:layout_gravity="center"
                    android:padding="6dp"
                    android:textColor="@color/wallet_holo_blue_light"
                    android:textAlignment="center"
                    android:text="@string/maker_travel_spec_individuals"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/couple_button"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:src="@mipmap/route_maker_couple"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0"
                    android:layout_gravity="center"
                    android:padding="6dp"
                    android:textColor="@color/wallet_holo_blue_light"
                    android:textAlignment="center"
                    android:text="@string/maker_travel_spec_couple"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/family_button"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:src="@mipmap/route_maker_family"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0"
                    android:layout_gravity="center"
                    android:padding="6dp"
                    android:textColor="@color/wallet_holo_blue_light"
                    android:textAlignment="center"
                    android:text="@string/maker_travel_spec_family"/>
            </LinearLayout>


        </LinearLayout>

    </LinearLayout>

</ScrollView>
