<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res/com.jake.quiltviewsample"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="vertical" android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="15dp">

        <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableBottom="@color/wallet_link_text_light"
        android:text="@string/maker_travel_type_text"
        android:textSize="26sp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="15dp"
        android:textColor="@color/wallet_holo_blue_light"
        android:textAlignment="center"
        android:layout_weight="0"/>

        <com.wefika.flowlayout.FlowLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginRight="15dp"
                android:layout_marginBottom="20dp">

                <android.support.design.widget.CheckableImageButton
                    android:id="@+id/culture_type_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@mipmap/route_maker_museum"
                    android:background="@drawable/rounded_corners"
                    android:layout_gravity="center_horizontal" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/maker_travel_type_culture"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginRight="15dp"
                android:layout_marginBottom="20dp">

                <android.support.design.widget.CheckableImageButton
                    android:id="@+id/active_type_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@mipmap/route_maker_museum"
                    android:background="@drawable/rounded_corners"
                    android:layout_gravity="center_horizontal" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/maker_travel_type_active"/>

            </LinearLayout>


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginRight="15dp"
                android:layout_marginBottom="20dp">

                <android.support.design.widget.CheckableImageButton
                    android:id="@+id/relax_type_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@mipmap/route_maker_museum"
                    android:background="@drawable/rounded_corners"
                    android:layout_gravity="center_horizontal" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/maker_travel_type_relax"/>

            </LinearLayout>


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginRight="15dp"
                android:layout_marginBottom="20dp">

                <android.support.design.widget.CheckableImageButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@mipmap/route_maker_museum"
                    android:background="@drawable/rounded_corners"
                    android:layout_gravity="center_horizontal" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/maker_travel_type_culture"/>

            </LinearLayout>


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginRight="15dp"
                android:layout_marginBottom="20dp">

                <android.support.design.widget.CheckableImageButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@mipmap/route_maker_museum"
                    android:background="@drawable/rounded_corners"
                    android:layout_gravity="center_horizontal" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/maker_travel_type_culture"/>

            </LinearLayout>


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginRight="15dp"
                android:layout_marginBottom="20dp">

                <android.support.design.widget.CheckableImageButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@mipmap/route_maker_museum"
                    android:background="@drawable/rounded_corners"
                    android:layout_gravity="center_horizontal" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/maker_travel_type_culture"/>

            </LinearLayout>


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginRight="15dp"
                android:layout_marginBottom="20dp">

                <android.support.design.widget.CheckableImageButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@mipmap/route_maker_museum"
                    android:background="@drawable/rounded_corners"
                    android:layout_gravity="center_horizontal" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/maker_travel_type_culture"/>

            </LinearLayout>


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginRight="15dp"
                android:layout_marginBottom="20dp">

                <android.support.design.widget.CheckableImageButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@mipmap/route_maker_museum"
                    android:background="@drawable/rounded_corners"
                    android:layout_gravity="center_horizontal" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/maker_travel_type_culture"/>

            </LinearLayout>

        </com.wefika.flowlayout.FlowLayout>

        <Button
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_margin="5dp"
            android:text="@string/next"
            android:layout_gravity="center_horizontal"
            android:onClick="onClickNextButton"/>

</LinearLayout>

</ScrollView>
